_generated-doc/3.0/config/quarkus-picocli-picocli-deployment-configuration.adoc

:summaryTableId: quarkus-picocli-picocli-deployment-configuration
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-picocli-picocli-deployment-configuration_configuration]]link:#quarkus-picocli-picocli-deployment-configuration_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-picocli-picocli-deployment-configuration_quarkus.picocli.native-image.processing.enable]]`link:#quarkus-picocli-picocli-deployment-configuration_quarkus.picocli.native-image.processing.enable[quarkus.picocli.native-image.processing.enable]`

[.description]
--
Set this to false to use the `picocli-codegen` annotation processor instead of build steps.  
CAUTION: this will have serious build-time performance impact since this is run on every restart in dev mode, use with care!  
This property is intended to be used only in cases where an incompatible change in the picocli library causes problems in the build steps used to support GraalVM Native images.  
In such cases this property allows users to make the trade-off between fast build cycles with the older version of picocli, and temporarily accept slower build cycles with the latest version of picocli until the updated extension is available.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PICOCLI_NATIVE_IMAGE_PROCESSING_ENABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PICOCLI_NATIVE_IMAGE_PROCESSING_ENABLE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`

|===